--- a/index.html
+++ b/index.html
@@ -118,5 +118,7 @@
       document.body.appendChild(script);
 
     </script>
+	
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
 </html>
