--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/tg.loader.js";
+      var loaderUrl = buildUrl + "/ui.loader.js";
       var config = {
-        dataUrl: buildUrl + "/tg.data",
-        frameworkUrl: buildUrl + "/tg.framework.js",
-        codeUrl: buildUrl + "/tg.wasm",
+        dataUrl: buildUrl + "/ui.data",
+        frameworkUrl: buildUrl + "/ui.framework.js",
+        codeUrl: buildUrl + "/ui.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "NymphPornGame",
